compiler/tests/success/otbn/intrinsic_subm.jazz
export
fn subm(reg u256 x y) -> reg u256 {
    reg u256 mod z;
    ?{}, z = #set0();
    mod = #BN_MODW(z);
    z = #BN_SUBM(x, y, mod);
    return z;
}
